# self-coding-agent

./: README.md  agent_notes.md  pyproject.toml
.agent_memory/: long_term_memory.jsonl
.agents/: codex_cn.agent
ai-chat/: 2026-06-11-project-planning-chat-export.md  thinking-doc.docx  ~$inking-doc.docx
configs/: default.json
dev_process_history/: phase1_pre_scaffold_CURRENT_STATUS_2026-06-12.md  phase3_before_verification_CURRENT_STATUS_2026-06-12.md  phase3_before_verification_PHASE_PROGRESS_2026-06-12.md  phase4_before_context_CURRENT_STATUS_2026-06-12.md  phase4_before_context_PHASE_PROGRESS_2026-06-12.md  phase5_before_context_stats_CURRENT_STATUS_2026-06-13.md  phase5_before_context_stats_PHASE_PROGRESS_2026-06-13.md  phase5_before_longterm_memory_CURRENT_STATUS_2026-06-13.md  phase5_before_longterm_memory_PHASE_PROGRESS_2026-06-13.md  phase5_before_memory_manager_CURRENT_STATUS_2026-06-13.md  phase5_before_memory_manager_PHASE_PROGRESS_2026-06-13.md  phase5_before_recall_strategy_CURRENT_STATUS_2026-06-12.md  phase5_before_recall_strategy_PHASE_PROGRESS_2026-06-12.md  phase5_before_tasktype_recall_CURRENT_STATUS_2026-06-13.md  phase5_before_tasktype_recall_PHASE_PROGRESS_2026-06-13.md  phase6_before_memory_read_filter_CURRENT_STATUS_2026-06-13.md  phase6_before_memory_read_filter_PHASE_PROGRESS_2026-06-13.md  phase6_before_memory_readback_CURRENT_STATUS_2026-06-13.md  phase6_before_memory_readback_PHASE_PROGRESS_2026-06-13.md
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DECISIONS.md  DEVELOPMENT_PLAYBOOK.md  DIRECTORY_GUIDE.md  MONTH_PLAN.md  PRD.md  chat.txt  (+3 more)
(+48 files in other folders)
