[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "self-coding-agent"
version = "0.1.0"
description = "A research harness for local-repo coding agent experiments."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
self-coding-agent = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "config", "loop", "runner", "tools", "trace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
